# ROIcoin

./: .gitignore  CONTRIBUTING.md  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  RELEASE_NOTES.md  aclocal.m4  alertkey.hex  alertkey.pem  config.status  configure  configure.ac  genesiscoinbase.hex  genesiscoinbase.pem  libroicoinconsensus.pc  libroicoinconsensus.pc.in  libtool  testnetalert.hex  testnetalert.pem
doc/: Doxyfile  (+24 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bignum.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  eccryptoverify.h  ecwrapper.cpp  ecwrapper.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.h  (+62 more)
src/.deps/: ROIcoin_cli-roicoin-cli.Po  ROIcoin_tx-roicoin-tx.Po  ROIcoind-roicoind.Po  libroicoin_cli_a-rpcclient.Po  libroicoin_common_a-amount.Po  libroicoin_common_a-arith_uint256.Po  libroicoin_common_a-base58.Po  libroicoin_common_a-chainparams.Po  libroicoin_common_a-coins.Po  libroicoin_common_a-compressor.Po  libroicoin_common_a-core_read.Po  libroicoin_common_a-core_write.Po  libroicoin_common_a-eccryptoverify.Po  libroicoin_common_a-ecwrapper.Po  libroicoin_common_a-hash.Po  libroicoin_common_a-key.Po  libroicoin_common_a-keystore.Po  libroicoin_common_a-netbase.Po  libroicoin_common_a-patternsearch.Po  libroicoin_common_a-protocol.Po  libroicoin_common_a-pubkey.Po  libroicoin_common_a-scheduler.Po  libroicoin_crypto_x86_a-aes.Po  libroicoin_crypto_x86_a-sha512.Po  libroicoin_server_a-addrman.Po  libroicoin_server_a-alert.Po  libroicoin_server_a-bloom.Po  libroicoin_server_a-chain.Po  libroicoin_server_a-checkpoints.Po  libroicoin_server_a-init.Po  libroicoin_server_a-leveldbwrapper.Po  libroicoin_server_a-main.Po  libroicoin_server_a-merkleblock.Po  libroicoin_server_a-miner.Po  libroicoin_server_a-net.Po  libroicoin_server_a-noui.Po  libroicoin_server_a-patternsearch.Po  libroicoin_server_a-pow.Po  libroicoin_server_a-rest.Po  libroicoin_server_a-rpcblockchain.Po  (+25 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/compat/.deps/: libroicoin_util_a-glibc_sanity.Po  libroicoin_util_a-glibcxx_sanity.Po  libroicoin_util_a-strnlen.Po
src/config/: roicoin-config.h  roicoin-config.h.in~  stamp-h1
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/.deps/: crypto_libroicoin_crypto_a-hmac_sha256.Po  crypto_libroicoin_crypto_a-hmac_sha512.Po  crypto_libroicoin_crypto_a-ripemd160.Po  crypto_libroicoin_crypto_a-sha1.Po  crypto_libroicoin_crypto_a-sha256.Po  crypto_libroicoin_crypto_a-sha512.Po  libroicoinconsensus_la-hmac_sha512.Plo  libroicoinconsensus_la-ripemd160.Plo  libroicoinconsensus_la-sha1.Plo  libroicoinconsensus_la-sha256.Plo  libroicoinconsensus_la-sha512.Plo
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/policy/: fees.cpp  fees.h
src/policy/.deps/: libroicoin_server_a-fees.Po
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/primitives/.deps/: libroicoin_common_a-block.Po  libroicoin_common_a-transaction.Po  libroicoinconsensus_la-transaction.Plo
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  depositcoinsdialog.cpp  depositcoinsdialog.h  deposittablemodel.cpp  deposittablemodel.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.cpp  paymentrequestplus.h  paymentserver.cpp  (+55 more)
src/qt/.deps/: qt_ROIcoin_qt-roicoin.Po  qt_libroicoinqt_a-addressbookpage.Po  qt_libroicoinqt_a-addresstablemodel.Po  qt_libroicoinqt_a-askpassphrasedialog.Po  qt_libroicoinqt_a-clientmodel.Po  qt_libroicoinqt_a-coincontroldialog.Po  qt_libroicoinqt_a-coincontroltreewidget.Po  qt_libroicoinqt_a-csvmodelwriter.Po  qt_libroicoinqt_a-depositcoinsdialog.Po  qt_libroicoinqt_a-editaddressdialog.Po  qt_libroicoinqt_a-guiutil.Po  qt_libroicoinqt_a-intro.Po  qt_libroicoinqt_a-moc_addressbookpage.Po  (+82 more)
src/script/: interpreter.cpp  interpreter.h  roicoinconsensus.cpp  roicoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  checkrates.sh  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  ratecheck.cpp  reverselock_tests.cpp  roicoin-util-test.py  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  (+14 more)
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
(+311 files in other folders)
